# cursely

./: .gitignore  README.md  cursely  cursely_modpack  cursely_modrinth_plugin  cursely_push_config  latest_alpha.mods  magical_souls.md  magical_souls.mods  magical_souls_linux.mods  magical_souls_lite.md  magical_souls_lite.mods  magical_souls_lite_linux.mods  magical_souls_windows.mods  pyproject.toml  rpg.mods  zombies.md  zombies.mods  zombies_(linux).mods  zombies_(windows).mods  zombies_linux.mods
cursely/: __main__.py  cursely_push_config
cursely/modpacks/: latest_alpha.mods  magical_souls.mods  magical_souls.resolved-mods  magical_souls_lite.mods  zombies.mods
cursely/modules/: config.py  dependencies.py  downloads.py  files.py  lockfile.py  modpack.py  modpack_config.py  modpack_statements.py  mods.py  search.py
magical_souls_config/: options.txt
magical_souls_config/config/: autohud.json5  awesomedungeon_1.properties  bettervillage_1.properties  dynamiccrosshair.json5  eldritch_mobs.json5  extrasounds.cache  indium-renderer.properties  iris.properties  lambdynlights.toml  libraryferret_1.properties  limitedspawners.toml  mca.json  mcsa.json5  moreculling.toml  nohunger.json5  resourceful-config-web.json  rrp.properties  shouldersurfing.toml  smoothswapping.json  sodium-options.json  soulsweapons.json  spiceoffabric.hjson  stacker.json  stylisheffects-client.toml  supplementaries-common.json  treechop-client.toml  treechop-common-2.toml.bak  treechop-common.toml  waystones.toml  xaerominimap.txt  xaeroworldmap.txt
(+60 files in other folders)
